--- a/html/exercises/index.html
+++ b/html/exercises/index.html
@@ -8,9 +8,16 @@
     <!-- DON'T TOUCH ANYTHING ABOVE THIS LINE -->
   </head>
   <body>
-    <!-- h1 goes here -->
-    <!-- ol goes here -->
-    <!-- a goes here -->
-    <!-- p goes here -->
+    <h1>Why I Love Web Development</h1><!-- h1 goes here -->
+    <ol> 
+      <li>It is fun</li>
+      <li>It brings out the creativity in me</li>
+      <li>It is very colorful</li>
+    </ol><!-- ol goes here -->
+
+    <a>https://education.launchcode.org/intro-to-web-dev-curriculum/html/exercises/index.html</a><!-- a goes here -->
+    <p>I would to mak something very interactive. Maybe a game site with mini games.
+      The site would have to include a forum or some type of online discussion groups
+    </p><!-- p goes here -->
   </body>
 </html>
