--- a/css/exercises/index.html
+++ b/css/exercises/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>CSS Exercises</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="styles.css" rel="stylesheet" type="text/css" />
     <style>
       body {
         background-color: yellow;
@@ -25,8 +25,6 @@
       #cool-list {
         color: red;
       }
-
-
     </style>
   </head>
   <body>
