--- a/fetch/studio/index.html
+++ b/fetch/studio/index.html
@@ -10,6 +10,20 @@
     <script src="script.js"></script>
     <h1>Astronauts</h1>
     <div id="container">
+       
+      <div class="astronaut">
+        <div class="bio" id="bio">
+            
+        </div>
+         <img class="avatar" src="images/mae-jemison.jpg">
+      </div>
+
+
+
+
+
+
+
         <!-- List of astronauts will be added here dynamically -->
     </div>
   </body>
